--- a/src/components/TimePicker/TimePicker.scss
+++ b/src/components/TimePicker/TimePicker.scss
@@ -1,9 +1,8 @@
 .timepicker__item {
   display: flex;
   flex-direction: column;
-  min-width: 25%;
 
-  input {
-    margin: 5px 0 0 0;
-  }
+  // input {
+  //   margin: 5px 0 0 0;
+  // }
 }
