--- a/src/pages/Main/Main.scss
+++ b/src/pages/Main/Main.scss
@@ -6,11 +6,11 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin: 1rem 0 1rem 0;
+  margin: 1rem auto;
   height: calc(100vh - 2rem);
 
   @include media-breakpoint-up(lg) {
-    margin: 3rem 0 3rem 0;
+    margin: 3rem auto;
     height: calc(100vh - 6rem);
     justify-content: space-around;
   }
